# ChangeLog for net-misc/mknbi
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/mknbi/ChangeLog,v 1.14 2005/11/25 18:31:11 vanquirius Exp $

*mknbi-1.4.4 (25 Nov 2005)

  25 Nov 2005; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +mknbi-1.4.4.ebuild:
  1.4.4 version bump for bug 112724. Thanks to Daniel Webert <rockoo at gmail
  dot com>.

  30 May 2005; Danny van Dyk <kugelfang@gentoo.org> mknbi-1.4.3.ebuild:
  Fixed deprecated usage of gcc.eclass. (BUG #92745)

  17 Apr 2005; <solar@gentoo.org> +files/mknbi-1.4.3-nossp.patch,
  mknbi-1.4.3.ebuild:
  - corrected compile problems when using pie or ssp while building this package

  23 Sep 2004; Karol Wojtaszek <sekretarz@gentoo.org> mknbi-1.4.3.ebuild:
  Fixed gcc-3.4 compile issues. Thanks to Mark Loeser <halcyon@whiterapid.com>
  in Bug 64049

  25 Apr 2004; Jon Hood <squinky86@gentoo.org> mknbi-1.4.0.ebuild,
  mknbi-1.4.1.ebuild, mknbi-1.4.3.ebuild:
  added "die"

  19 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> mknbi-1.2.11.ebuild,
  mknbi-1.2.12.ebuild, mknbi-1.4.0.ebuild, mknbi-1.4.1.ebuild,
  mknbi-1.4.3.ebuild:
  fix depend (bug #45110); tidy

*mknbi-1.4.3 (08 Dec 2003)

  08 Dec 2003; Martin Holzer <mholzer@gentoo.org> mknbi-1.4.3.ebuild:
  Version bumped.

*mknbi-1.2.12 (20 Jul 2003)

  20 Jul 2003; Martin Holzer <mholzer@gentoo.org> mknbi-1.2.12.ebuild,
  mknbi-1.4.1.ebuild:
  Version bumped.

*mknbi-1.4.0 (01 Mar 2003)

  01 Mar 2003; Martin Holzer <mholzer@gentoo.org> mknbi-1.4.0.ebuild
  files/digest-mknbi-1.4.0 ChangeLog :
  Version bumped. Submitted in #16362.
  

*mknbi-1.2.11.ebuild (25 Dec 2002)

  25 Dec 2002; Martin Holzer <mholzer@gentoo.org> knbi-1.2.11.ebuild files/digest-mknbi-1.2.11 ChangeLog :
  Version pumped, fixed dependency. Closes #12446.

*mknbi-1.2.10.ebuild (13 Dec 2002)
