@@ -1,1 +1,3 @@
 MD5 5ddafef0a582cfb2b3cd30951662e6e2 mknbi-1.4.4.tar.gz 212454
+RMD160 05c8ea64b57d83c7028a613cb64b12c0481c1462 mknbi-1.4.4.tar.gz 212454
+SHA256 e5c62131a79cebf31234af252975d4c242ed8face0249f11a5772aeff50e3f02 mknbi-1.4.4.tar.gz 212454
