@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/mknbi
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/mknbi/ChangeLog,v 1.14 2005/11/25 18:31:11 vanquirius Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/mknbi/ChangeLog,v 1.15 2006/12/09 12:05:10 masterdriverz Exp $
+
+  09 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
+  -mknbi-1.2.11.ebuild, -mknbi-1.2.12.ebuild, -mknbi-1.4.0.ebuild,
+  -mknbi-1.4.1.ebuild, mknbi-1.4.4.ebuild:
+  Remove old versions, add blocker with sys-boot/netboot
 
 *mknbi-1.4.4 (25 Nov 2005)
 
